# vxcore

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLI_TESTING.md  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  args.cpp  args.h  config_cmd.cpp  config_cmd.h  json_helpers.cpp  json_helpers.h  main.cpp  notebook_cmd.cpp  notebook_cmd.h  tag_cmd.cpp  tag_cmd.h
cmake/: git_sync_sources.cmake
docs/: bundled-notebook.md  plan.md  raw-notebook.md  sync-evolution-plan.md
include/vxcore/: notebook_json_keys.h  vxcore.h  vxcore_events.h  vxcore_log.h  vxcore_types.h
scripts/: check_git_isolation.ps1  init.cmd  init.sh  pre-commit
src/: CMakeLists.txt
src/api/: api_utils.h  error_handler.cpp  error_handler.h  handle_manager.cpp  handle_manager.h  vxcore_activity_api.cpp  vxcore_api.cpp  vxcore_buffer_api.cpp  vxcore_event_api.cpp  vxcore_events.cpp  vxcore_filetype_api.cpp  vxcore_folder_api.cpp  vxcore_node_api.cpp  vxcore_note_api.cpp  vxcore_notebook_api.cpp  vxcore_search_api.cpp  vxcore_snippet_api.cpp  vxcore_sync_api.cpp  vxcore_tag_api.cpp  vxcore_template_api.cpp  vxcore_work_queue_api.cpp  vxcore_workspace_api.cpp
src/core/: activity_manager.cpp  activity_manager.h  buffer.cpp  buffer.h  buffer_manager.cpp  buffer_manager.h  buffer_provider.cpp  buffer_provider.h  bundled_folder_manager.cpp  bundled_folder_manager.h  bundled_notebook.cpp  bundled_notebook.h  config_manager.cpp  config_manager.h  context.cpp  context.h  event_manager.cpp  event_manager.h  event_names.h  external_buffer_provider.cpp  external_buffer_provider.h  filetype_config.cpp  folder.cpp  folder.h  folder_manager.cpp  folder_manager.h  history_manager.cpp  history_manager.h  metadata_store.h  notebook.cpp  notebook.h  notebook_json_keys.h  notebook_manager.cpp  notebook_manager.h  raw_folder_manager.cpp  raw_folder_manager.h  raw_notebook.cpp  raw_notebook.h  snippet_manager.cpp  snippet_manager.h  (+14 more)
src/core/content_processor/: asset_utils.cpp  asset_utils.h  content_processor.cpp  content_processor.h  file_type_handler.h  markdown_handler.cpp  markdown_handler.h
src/db/: CMakeLists.txt  activity_db.cpp  activity_db.h  db_manager.cpp  db_manager.h  db_schema.h  file_db.cpp  file_db.h  notebook_db.cpp  notebook_db.h  sqlite_metadata_store.cpp  sqlite_metadata_store.h  sync_manager.cpp  sync_manager.h  tag_db.cpp  tag_db.h
src/platform/: path_provider.cpp  path_provider.h  process_utils.cpp  process_utils.h
src/search/: rg_search_backend.cpp  rg_search_backend.h  search_backend.h  search_file_info.cpp  search_file_info.h  search_manager.cpp  search_manager.h  search_query.cpp  search_query.h  search_queue_name.h  simple_search_backend.cpp  simple_search_backend.h
src/sync/: AGENTS.md  credential_provider.cpp  credential_provider.h  dirty_tracker.cpp  dirty_tracker.h  git_sync_backend.cpp  git_sync_backend.h  libgit2_init.cpp  libgit2_init.h  retry_policy.cpp  retry_policy.h  sync_backend.h  sync_backend_registry.cpp  sync_backend_registry.h  sync_builtin_backends.cpp  sync_cancellation.cpp  sync_cancellation.h  sync_json_keys.cpp  sync_json_keys.h  sync_manager.cpp  sync_manager.h  sync_progress_dispatcher.cpp  sync_progress_dispatcher.h  sync_types.cpp  sync_types.h
src/sync/git/: git_config_fixer.cpp  git_config_fixer.h  git_conflict_resolver.cpp  git_conflict_resolver.h  git_credential_callback.cpp  git_credential_callback.h  git_defaults.cpp  git_defaults.h  git_error_translator.cpp  git_error_translator.h  git_handles.h  git_options.cpp  git_options.h  git_repo_bootstrap.cpp  git_repo_bootstrap.h  git_sync_backend.cpp  git_sync_backend.h  git_sync_pipeline.cpp  git_sync_pipeline.h  gitkeep_sweeper.cpp  gitkeep_sweeper.h  libgit2_init.cpp  libgit2_init.h
src/utils/: base64.cpp  base64.h  file_utils.cpp  file_utils.h  logger.cpp  logger.h  string_utils.cpp  string_utils.h  utils.cpp  utils.h
tests/: CMakeLists.txt  mock_sync_backend.cpp  mock_sync_backend.h  spike_libgit2.cpp  test_activity.cpp  test_activity_db.cpp  test_asset_utils.cpp  test_buffer.cpp  test_buffer_save_marks_dirty.cpp  test_buffer_save_read_only.cpp  test_bundled_folder_manager_read_only.cpp  test_content_processor.cpp  test_context_create_destroy.cpp  test_core.cpp  test_credential_provider.cpp  test_db.cpp  test_dirty_tracker.cpp  test_e2e_assets.cpp  test_error_codes.cpp  test_error_message.cpp  test_event_manager.cpp  test_file_utils.cpp  test_filetype.cpp  test_folder.cpp  test_folder_child_order.cpp  test_folder_manager.cpp  test_git_backend_autoreg.cpp  test_git_error_translator.cpp  test_git_options.cpp  test_git_sync_clone.cpp  test_git_sync_conflicts.cpp  test_git_sync_credentials.cpp  test_git_sync_helpers.cpp  test_git_sync_helpers.h  test_git_sync_init.cpp  test_git_sync_pushpull.cpp  test_git_sync_roundtrip.cpp  test_git_sync_status.cpp  test_gitkeep_basic.cpp  test_gitkeep_cleanup.cpp  (+62 more)
tests/test_internals/: CMakeLists.txt
tests/test_internals/include/test_internals/: mock_credential_provider.h  mock_sync_backend.h  sync_test_helpers.h
tests/test_internals/src/: mock_credential_provider.cpp  mock_sync_backend.cpp  sync_test_helpers.cpp
tests/unit/: test_main.cpp
tools/: AGENTS.md
tools/search-validate/: CMakeLists.txt  main.cpp
